@@ -41,7 +41,7 @@ def create_app(confpath=None):
                 # the conf may contain the {here} macro, so we have to
                 # replace it with actual value.
                 here = os.path.dirname(os.path.abspath(confpath))
-                conf = yaml.load(f.read().format(here=here))
+                conf = yaml.safe_load(f.read().format(here=here))
 
     except (FileNotFoundError, PermissionError) as exc:
         # it's ok that a user doesn't have a settings file or doesn't have
